--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "tonalrap",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://danigb.github.io/tonal",
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -11,6 +13,8 @@
     "redux": "^3.7.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
