--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://danigb.github.io/tonal-app",
   "dependencies": {
+    "downshift": "^1.10.1",
     "gh-pages": "^1.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
