--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "tonal-key": "^1.0.0-pre5",
+    "tonal-abc-notation": "^1.0.0-pre5"
   },
   "scripts": {
     "predeploy": "npm run build",
