Add keyboard to the top

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
+    "tonal": "^1.1.0",
     "tonal-abc-notation": "^1.0.0-pre5",
     "tonal-key": "^1.0.0-pre5"
   },
